# liia-tools-pipeline

./: .env.sample  .gitignore  Dockerfile  Dockerfile_Client  Dockerfile_LA  Dockerfile_La  Dockerfile_Org  Dockerfile_hub  Dockerfile_spoke  README.md  pyproject.toml  test.ipynb
.github/: CODEOWNERS
.github/workflows/: base_build.yml  build_interim.yml  build_la.yml  build_la_release.yml  build_org.yml  build_org_release.yml  build_organisation.yml  build_platform.yml  build_staging.yml  dependabot_slack.yml  tests.yml
docs/: FAQ.md  Intro_to_docs.md  file_headers.md  fix_episodes.md  general_pipeline.md  pipeline_creation.md
docs/file_headers_by_dataset/: annex_a_headers.md  cin_census_nodes.md  pnw_census_headers.md  school_census_headers.md  ssda903_headers.md
external_data/Ofsted/: Closed_childrens_homes_31Mar24.csv  Provider_level_at_31_Aug_2023.csv  Provider_level_at_31_Aug_2024.csv  Provider_level_in_year_2023-24.csv  Providers_places_at_31_Aug_2023.csv  Providers_places_at_31_Aug_2024.csv
liiatools/: __main__.py
liiatools/annex_a_pipeline/: build_schema.py  pipeline.py  stream.py  stream_filters.py  stream_pipeline.py
liiatools/cans_pipeline/: stream_filters.py  stream_pipeline.py  summary_sheet_mapping.py
liiatools/cin_census_pipeline/: cli.py  dedup_cin.py  pipeline.py  stream_filters.py  stream_pipeline.py  stream_record.py
liiatools/common/: _fs_serializer.py  _transform_functions.py  aggregate.py  archive.py  checks.py  constants.py  converters.py  file_header_readme_generator.py  generate_dataset_docs.py  pipeline.py  stream_filters.py  stream_parse.py  stream_pipeline.py  transform.py
liiatools/csww_pipeline/: cli.py  stream_filters.py  stream_pipeline.py  (+1 more)
liiatools_pipeline/: repository.py  repository_cin.py  repository_client.py  repository_la.py  repository_org.py
(+411 files in other folders)
