[tool.poetry]
name = "liiatools-dagster"
version = "0.2.1"
description = "Children's Services Data Tools - Utilities for cleaning and normalising CS data by Social Finance"
authors = [
    "Michael Hanks <michael.hanks@socialfinance.org.uk>",
    "Patrick Troy <patrick.troy@socialfinance.org.uk>",
    "Kaj Siebert <kaj@k-si.com>",
    "Matthew Pugh <matthew.pugh@socialfinance.org.uk>"
]
license = "MIT"
packages = [{include = "liiatools"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
lxml = ">=4.9.1,<7.0.0"
more-itertools = "^8.12.0"
sfdata-stream-parser = "^0.6.0"
xmlschema = "^1.10.0"
click = "^8.1.7"
PyYAML = "^6.0"
tablib = {extras = ["cli", "xlsx"], version = "^3.2.0"}
regex = "^2022.4.24"
dacite = "^1.6.0"
XlsxWriter = "^3.0.3"
pandas = "2.2.1"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
click-log = "^0.4.0"
python-decouple = "^3.8"
faust-cchardet = "^2.1.19"
pydantic = "^2.12.5"
pydantic-yaml = "^1.1.1"
fs = "^2.4.16"
fs-s3fs = "^1.1.1"
backports-strenum = "^1.2.4"
jupyterlab = {version = "^4.0.6", optional = true}
dagster = "^1.12.18"
dagster-webserver = "^1.12.18"
dagster-docker = "^0.28.18"
dagster-postgres = "^0.28.18"
alembic = "^1.13.1"
python-dateutil = "^2.9.0.post0"
chardet = "^5.2.0"
liia-tools-pipeline-config = {git = "https://github.com/SocialFinanceDigitalLabs/liia-tools-pipeline-config.git"}
pre-commit = "^4.2.0"
pyarrow = "^21.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.1,<10.0.0"
coverage = "^6.3.2"
safety = "^1.10.3"
black = ">=22.1,<27.0"
flake8 = "^4.0.1"
sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]
jupyter = ["jupyterlab"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
